--- a/skyrim4gb_helper/skyrim4gb_helper.vcproj
+++ b/skyrim4gb_helper/skyrim4gb_helper.vcproj
@@ -42,8 +42,10 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;FNV4GB_HELPER_EXPORTS"
+				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
@@ -120,8 +122,10 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;FNV4GB_HELPER_EXPORTS"
+				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
