--- a/skyrim4gb/skyrim4gb.vcxproj.filters
+++ b/skyrim4gb/skyrim4gb.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\conio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -29,11 +32,15 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\conio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="icon1.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\Skyrim4GB Readme.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="skyrim4gb.rc">
