--- a/skyrim4gb_helper/skyrim4gb_helper.vcxproj
+++ b/skyrim4gb_helper/skyrim4gb_helper.vcxproj
@@ -58,6 +58,7 @@
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -80,6 +81,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -93,6 +95,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\conio.cpp" />
     <ClCompile Include="..\redirector.cpp" />
     <ClCompile Include="skyrim4gb_helper.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -101,6 +104,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\conio.h" />
     <ClInclude Include="..\redirector.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
