--- a/skyrim4gb_helper/skyrim4gb_helper.vcxproj.filters
+++ b/skyrim4gb_helper/skyrim4gb_helper.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\conio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\redirector.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\conio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
