--- a/skyrim4gb/skyrim4gb.vcxproj.filters
+++ b/skyrim4gb/skyrim4gb.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="..\conio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\injection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\miscfuncs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -33,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\conio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\injection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\miscfuncs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
