--- a/skyrim4gb_helper/skyrim4gb_helper.vcxproj
+++ b/skyrim4gb_helper/skyrim4gb_helper.vcxproj
@@ -61,7 +61,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Psapi.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -84,7 +84,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Psapi.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -96,6 +96,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\conio.cpp" />
+    <ClCompile Include="..\injection.cpp" />
+    <ClCompile Include="..\miscfuncs.cpp" />
     <ClCompile Include="..\redirector.cpp" />
     <ClCompile Include="skyrim4gb_helper.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\conio.h" />
+    <ClInclude Include="..\injection.h" />
     <ClInclude Include="..\redirector.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
