--- a/skyrim4gb_helper/skyrim4gb_helper.vcxproj.filters
+++ b/skyrim4gb_helper/skyrim4gb_helper.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="..\conio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\injection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\miscfuncs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\redirector.h">
@@ -39,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\conio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\injection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
